--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "comic-life-nights-landing",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://twalker7.github.io/comic-life-nights-landing/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
